[package]
name = "typst-as-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# typst essentials
typst = "0.11"
comemo = "0.4"

# Fetching and unzipping packages
zune-inflate = { version = "0.2", default-features = false, features = [
  "gzip",
  "std",
] }
tar = "0.4"
ureq = "2.9"

# utils
time = "0.3"
ttf-parser = "0.24"

[lib]
name = "typst_as_library"

[dev-dependencies]
typst-pdf = "0.11"
